# inkspace

./: .replit  app.py  pyproject.toml  replit.md
.local/state/replit/agent/filesystem/: filesystem_state.json
data/: notes.json  users.json
static/css/: style.css
static/js/: script.js
templates/: app_lock.html  base.html  confirm_delete.html  confirm_view.html  edit_note.html  home.html  login.html  my_notes.html  note.html  profile.html  publish_notes.html  register.html  settings.html  verify_delete_pin.html  verify_edit_pin.html  view_note.html
